--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink:        pretty
 relative_permalinks: true
 
 # Setup
-title:            Michael Cogswell
+title:            Michael Cogswell's Blog
 url:              http://mcogswell.io
 baseurl:          ''
 
