add cv link to side and update cv

--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,5 @@ version:          0.1
 
 github:
   repo:           https://github.com/mcogswell/mcogswell.github.com
+
+cv_url:           /assets/cv_oct_2015.pdf
