--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@ author:
   name:           'Michael Cogswell'
   url:            http://mcogswell.io
 
-paginate:         2
+paginate:         5
+paginate_path:    "/blog/page:num/"
 
 # Custom vars
 version:          0.2
