--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,6 @@ version:          0.2
 github:
   repo:           https://github.com/mcogswell/mcogswell.github.com
 
-cv_url:           /assets/cv_aug2_2016.pdf
+cv_url:           /assets/cv_feb_2018.pdf
 
-gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
